# cmake-js

./: .eslintrc  .eslintrc.json  .gitignore  .jshintrc  .npmignore  .prettierignore  .yarnrc.yml  CMakeLists.txt  LICENSE  Lib.cmake  README.md  bindings.d.ts  bindings.js  changelog.md  demo.js  gulpfile.js  index.js  package-lock.json  package.json  tsconfig.json  tsconfig.types.json  vcpkg-configuration.json  vcpkg.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: cmake.yaml  node.yaml
lib/: appCMakeJSConfig.js  buildLogic.js  buildSystem.js  cMake.js  cmLog.js  configureLogic.js  demo.node.d.ts  demo.node.js  demo.node.ts  dist.js  downloader.js  environment.js  generator.js  generatorFactory.js  index.js  intLog.js  locateNAN.js  locateNodeApi.js  make.js  msBuild.js  ninja.js  nodeApi.js  npmConfig.js  prebuild.js  processHelpers.js  runtimePaths.js  targetOptions.js  toolset.js  vsDetect.js
lib/c/: win_delay_load_hook.c
lib/cpp/: win_delay_load_hook.cc
lib/demo/: demo.node.js  demo.node.ts
lib/es5/: appCMakeJSConfig.js  appCMakeJSConfig.js.map  buildSystem.js  buildSystem.js.map  cMake.js  cMake.js.map  cmLog.js  cmLog.js.map  dist.js  dist.js.map  downloader.js  downloader.js.map  environment.js  environment.js.map  index.js  index.js.map  locateNAN.js  locateNAN.js.map  processHelpers.js  processHelpers.js.map  runtimePaths.js  runtimePaths.js.map  targetOptions.js  targetOptions.js.map  toolset.js  toolset.js.map  vsDetect.js  vsDetect.js.map
lib/es6/: buildSystem.js  cMake.js  cmLog.js  dist.js  downloader.js  environment.js  index.js  locateNAN.js  packages.js  processHelpers.js  runtimePaths.js  targetOptions.js  toolset.js  vsDetect.js
lib/import/: README  find-visualstudio.d.ts  find-visualstudio.js  util.js
prototype/: CMakeLists.txt  cmake-js.js
prototype/src/: addon.cpp
rewrite/old/: buildSystem.js  cMake.js  environment.js  runtimePaths.js  targetOptions.js  toolset.js
rewrite/src/: buildDeps.mts  buildSystem.ts  cmake-js-bin.mts  dist.mts  dist.ts  downloader.mts  downloader.ts  findCmake.mts  processHelpers.mts  processHelpers.ts  runtimePaths.mts  toolchain.ts  toolchain.ts_
scripts/: postinstall.js
share/: CMakeJS.cmake  README.md
share/cmake/: CMakeJS.cmake  README.md  api.js
share/cmake/_cmakejs/: nan.cmake  node-addon-api.cmake  node-api.cmake  node-dev.cmake
src/: appCMakeJSConfig.ts  buildDeps.mts  buildSystem.ts  cMake.ts  cmLog.ts  cmake-js-bin.mts  dist.ts  downloader.ts  environment.ts  findCmake.mts  index.ts  locateNAN.ts  locateNodeApi.ts  npmConfig.ts  processHelpers.ts  runtimePaths.mts  runtimePaths.ts  targetOptions.ts  toolset.ts  win_delay_load_hook.cc
src/demo/: addon.cpp
src/import/: find-visualstudio.ts  util.ts
tests/: cMakeTests.js  distTests.js  index.js  index.ts
tests-app/: cli.spec.ts  fake-cmake
tests-cmake/: cmake.spec.ts  nan.spec.ts  node-addon-api.spec.ts  node-api.spec.ts  other.spec.ts  test-runner.ts
tests-cmake-versions/: cmake-versions.spec.ts
tests-cmake/projects/nan/: CMakeLists.txt  README.md  package.json
tests-cmake/projects/nan/src/hello/: addon.cc
tests-cmake/projects/node-addon-api/: CMakeLists.txt  package.json
tests-cmake/projects/node-addon-api-subdir/src/: CMakeLists.txt
tests-cmake/projects/node-api/: CMakeLists.txt  README.md  package.json
tests/api/: README.md
tests/api/hello/: CMakeLists.txt  index.js  package.json
tests/api/hello/src/hello/: addon.cpp
tests/api/hello_c/: CMakeLists.txt  README.md  package.json
tests/api/hello_consumer/: README.md  index.js  package.json
tests/api/hello_with_curl/: CMakeLists.txt  README.md  index.js  package.json  tsconfig.json
tests/api/hello_with_curl/include/hello/: addon.h
tests/api/hello_with_curl/lib/: addon.node.d.ts  addon.node.ts
tests/api/hello_with_curl/src/hello/: addon.cpp  get.cpp  post.cpp
tests/api/hello_with_curl/tests/hello/: curl_version.js  get.js  hello.js  napi_version.js  post.js  tests.cmake
tests/api/hello_with_testing_and_packing/: CMakeLists.txt  README.md  index.js  package.json
tests/api/hello_with_testing_and_packing/lib/: addon.node.js
tests/api/hello_with_testing_and_packing/src/hello/: addon.cpp
tests/api/hello_with_testing_and_packing/tests/hello/: tests.cmake  version.js
tests/api/hello_with_types/: CMakeLists.txt  README.md  index.js  package.json
tests/api/hello_with_types/lib/: addon.node.d.ts  addon.node.js  addon.node.ts
tests/demo/: hello.js  tests.cmake  version.js
tests/es5/: buildSystem.js  buildSystem.js.map  cMakeTests.js  cMakeTests.js.map  dist.js  dist.js.map  distTests.js  distTests.js.map  index.js  index.js.map  locateNAN.js  locateNAN.js.map  testCases.js  testCases.js.map  testRunner.js  testRunner.js.map
tests/es5/prototype/: binding.gyp
tests/es5/prototype2/src/: addon.cpp
tests/es6/: buildSystem.js  buildSystem.ts  cMakeTests.js  dist.js  dist.ts  distTests.js  index.js  index.ts  locateNAN.js  locateNAN.ts  testCases.js  testCases.ts  testRunner.js  testRunner.ts
tests/es6/prototype/: CMakeLists.txt
tests/es6/prototype-napi/: CMakeLists.txt  package.json
tests/es6/prototype-napi-c/: CMakeLists.txt
tests/es6/prototype-napi-c/src/: addon.c
tests/es6/prototype-napi/src/: addon.cpp
tests/es6/prototype/src/: addon.cpp
tests/es6/prototype2/: CMakeLists.txt
tests/es6/prototype2/src/: addon.cpp
tests/prototype/: CMakeLists.txt  app.js  cmake-js.js
tests/prototype2/: CMakeLists.txt
tests/prototype2/src/: addon.cpp
tests/targets/: README.md
tests/targets/cmake-js/: .gitignore  CMakeLists.txt  package.json
tests/targets/node-addon-api/: CMakeLists.txt  package.json
tests/targets/node-api/: CMakeLists.txt  README.md  package.json
tests/targets/node-api/src/hello/: addon.c  addon.cc
tests/targets/node-dev/: CMakeLists.txt  index.js  package.json
tests2/: nan.spec.ts  node-addon-api.spec.ts  node-api.spec.ts  test-runner.ts
tests2/projects/nan/: CMakeLists.txt
tests2/projects/nan/src/hello/: addon.cc
versions/: baseline.json
(+4 files in other folders)
